--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -16,4 +16,7 @@
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
+
+    // z - индексы
+    --modal-z-index: 10;
 }
