lint ts scss fix

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,6 +5,5 @@
     --secondary-color: #04ff04;
     --inverted-primary-color: #0232c2;
     --inverted-secondary-color: #0452ff;
-
-    --overlay-color: rgba(0 0 0 / 60%)
+    --overlay-color: rgba(0 0 0 / 60%);
 }
