--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -5,6 +5,5 @@
     --secondary-color: #0449e0;
     --inverted-primary-color: #049604;
     --inverted-secondary-color: #04ff04;
-
-    --overlay-color: rgba(0 0 0 / 60%)
+    --overlay-color: rgba(0 0 0 / 60%);
 }
